Add binary to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 
 #Folders
 
-# Binaries for programs and plugins
 
+# Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
@@ -21,5 +21,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-
 .DS_store
+
+paragrapher.io
